syntax = "proto3";
package cyber.rank.v1beta1;

option go_package = "github.com/cybercongress/go-cyber/x/rank/types";

message PageRequest {
  uint32 page = 1;
  uint32 per_page = 2;
}

message PageResponse { uint32 total = 1; }
